# trim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
example/animals/: README.md  animals.md
example/binary/: binary.txt  test.txt
example/primes/: README.md  parens.py  parens.txt  primes.md  test.txt
include/trim/: trim.hpp
include/trim/cli/: cli.hpp  option.hpp  parse.hpp
include/trim/color/: parse.hpp  rgb.hpp
include/trim/container/: contour.hpp  labels.hpp  tree.hpp
include/trim/layout/: make_layout.hpp  tree_layout.hpp
include/trim/parsing/: bitstring.hpp  markdown.hpp  parentheses.hpp  parser.hpp
include/trim/port/: compiler.hpp
include/trim/scene/: scene.hpp
include/trim/sprite/: box.hpp  character.hpp  composite.hpp  joint.hpp  line.hpp  node.hpp  spline3.hpp  sprite.hpp  text.hpp  transform.hpp  tree.hpp
include/trim/style/: style.hpp
include/trim/util/: assert.hpp  axis.hpp  direction.hpp  format_int.hpp  geometry.hpp  ints.hpp  memory_ostream.hpp  split.hpp  splitmix64.hpp  string.hpp  unique_ptr.hpp
src/: trim.cpp
test/unit/: driver.cpp  parens.hpp
